update  frontend model
