# src/api/frontend.openapi.json
@@ -88,6 +88,38 @@
       }
     },
     "/dasher/short/{short}": {
+      "get": {
+        "tags": [
+          "dasher"
+        ],
+        "summary": "Get details for a Short",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "short",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "The short part of the URL"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of aggregated clicks",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "./shared.openapi.yml#/components/schemas/ShortURL"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input"
+          }
+        }
+      },
       "delete": {
         "tags": [
           "dasher"
@@ -110,6 +142,43 @@
           },
           "404": {
             "description": "Short URL not found"
+          }
+        }
+      }
+    },
+    "/dasher/short/{short}/clicks": {
+      "get": {
+        "tags": [
+          "dasher"
+        ],
+        "summary": "Get details for a Short",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "short",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "The short part of the URL"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of aggregated clicks",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "./shared.openapi.yml#/components/schemas/ShortClickCount"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input"
           }
         }
       }
