# src/services/front/src/app/api/model/models.ts
@@ -1,2 +1,3 @@
+export * from './short-click-count';
 export * from './short-url';
 export * from './shortn-req';
