# src/services/front/src/app/api/model/short-click-count.ts
@@ -1,0 +1,27 @@
+/**
+ * Shortn API
+ * API for shortening URLs and retrieving all shortened URLs.
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface ShortClickCount { 
+    /**
+     * The short path corresponding to the click count
+     */
+    Short?: string;
+    /**
+     * The timestamp of when the click occurred
+     */
+    Timestamp?: string;
+    /**
+     * The number of clicks recorded for the short URL
+     */
+    Count?: number;
+}
+
